--- a/editable-config.json
+++ b/editable-config.json
@@ -1,7 +1,7 @@
 {
   "editable": {
-    "removedAttributes": [
-      ["#portal-bookmarklet-link", "href"]
-    ]
+    "removedAttributeMap": {
+      "#portal-bookmarklet-link": "href"
+    }
   }
 }
