--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test"   : "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "0.12.7",
+    "npm": "2.11.3"
+  },
   "devDependencies": {
     "gulp": "*",
     "gulp-babel": "*",
