--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "npm": "2.11.3"
   },
   "devDependencies": {
-    "gulp": "*",
-    "gulp-babel": "*",
-    "gulp-uglify": "*",
-    "gulp-rename": "*",
-    "del": "*",
-    "gulp-eslint": "*",
-    "gulp-if": "*",
-    "gulp-load-plugins": "*",
-    "gulp-plumber": "*",
-    "gulp-notify": "*",
-    "gulp-sass": "*",
-    "gulp-sass-lint": "*",
-    "gulp-cssmin": "*",
-    "gulp-htmlhint": "*",
-    "browserify": "*",
-    "vinyl-source-stream": "*",
-    "browserify-shim": "*",
-    "gulp-sourcemaps": "*",
-    "vinyl-buffer": "*",
-    "browser-sync": "*",
-    "babel-runtime": "*",
-    "gulp-concat": "*",
+    "gulp": "3.9.0",
+    "gulp-babel": "5.2.1",
+    "gulp-uglify": "1.4.1",
+    "gulp-rename": "1.2.2",
+    "del": "2.0.2",
+    "gulp-eslint": "1.0.0",
+    "gulp-if": "1.2.5",
+    "gulp-load-plugins": "0.10.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-notify": "2.2.0",
+    "gulp-sass": "2.0.4",
+    "gulp-sass-lint": "1.0.1",
+    "gulp-cssmin": "0.1.7",
+    "gulp-htmlhint": "0.3.0",
+    "browserify": "11.2.0",
+    "vinyl-source-stream": "1.1.0",
+    "browserify-shim": "3.8.10",
+    "gulp-sourcemaps": "1.5.2",
+    "vinyl-buffer": "1.0.0",
+    "browser-sync": "2.9.6",
+    "babel-runtime": "5.8.25",
+    "gulp-concat": "2.6.0",
     "gulp-nodemon": "2.0.3",
-    "nodemon": "1.3.x",
-    "gulp-pleeease": "1.2.x"
+    "nodemon": "1.3.8",
+    "gulp-pleeease": "1.2.0"
   },
   "browserify": {
     "transform": [
