--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "2.0.0",
   "description": "Editable is a tool to edit HTML without an editor",
   "main": "src/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "webpack": "^4.18.0",
+    "webpack-cli": "^3.1.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
