--- a/package.json
+++ b/package.json
@@ -2,14 +2,33 @@
   "name": "editable",
   "version": "2.0.0",
   "description": "Editable is a tool to edit HTML without an editor",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.0.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^5.5.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --open --mode development",
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
