--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/main.js",
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0",
+    "reset-css": "^4.0.1",
+    "sanitize.css": "^7.0.3",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
   },
@@ -15,6 +17,8 @@
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.1.0",
     "eslint": "^5.5.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.0",
@@ -23,6 +27,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
+    "style-loader": "^0.23.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4"
   },
