--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "webpack-merge": "^4.1.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
+    "dev": "webpack-dev-server --mode development",
     "prod": "webpack --mode production"
   },
   "repository": {
