--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "editable",
   "version": "2.0.0",
   "description": "Editable is a tool to edit HTML without an editor",
-  "main": "src/main.js",
+  "main": "src/app.js",
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0",
     "reset-css": "^4.0.1",
